gcc/testsuite/rust/rustc/ui/parser/macro/bad-macro-argument.rs
fn main() {
    let message = "world";
    println!("Hello, {}", message/); // { dg-error "" "" { target *-*-* } }
}

